@@ -1,4 +1,5 @@
 0.05
+ - Add error for bad snaktype to Snak and MediainfoSnak classes.
  - Fix test requirements.
  - Fix usage of Wikibase::Cache. Not use backend directly.
 
